@@ -136,7 +136,6 @@ gboolean     na_iprefs_read_bool        ( const NAIPrefs *instance, const gchar 
 gchar       *na_iprefs_read_string      ( const NAIPrefs *instance, const gchar *key, const gchar *default_value );
 GSList      *na_iprefs_read_string_list ( const NAIPrefs *instance, const gchar *key, const gchar *default_value );
 
-/*void         na_iprefs_write_bool( NAIPrefs *instance, const gchar *key, gboolean value );*/
 void         na_iprefs_write_string_list( const NAIPrefs *instance, const gchar *key, GSList *value );
 
 G_END_DECLS
